Fixing commits layout on small screens

--- a/app/assets/stylesheets/_base/_media-queries.scss
+++ b/app/assets/stylesheets/_base/_media-queries.scss
@@ -4,6 +4,7 @@ $desktop: 1000px;
 
 $media-queries: (
   mobile: "(max-width: #{$mobile - 1})",
+  mobile-up: "(min-width: #{$mobile})",
   tablet-down: "(max-width: #{$desktop - 1})",
   tablet: "(min-width: #{$mobile} and max-width: #{$tablet - 1})",
   tablet-up: "(min-width: #{$tablet})",
